# wgpu-voxel-game

./: Cargo.toml  README.md
game/: Cargo.toml
game/src/: main.rs
graphics/: Cargo.toml
graphics/src/: camera.rs  coord.rs  graphics.rs  instance.rs  lib.rs  pipeline.rs  quad.rs  renderer.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
graphics/src/shaders/: shader.wgsl
math/: Cargo.toml
math/src/: coord.rs  face.rs  lib.rs  point.rs  quad.rs  seed.rs
math/src/block/: block_map.rs  block_vector.rs  mod.rs
world/: Cargo.toml
world/src/: block.rs  chunk.rs  lib.rs  material.rs
