[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = { path = '../math', version = '*' }
world = { path = '../world', version = '*' }
log = "0.4.0"
wgpu = "0.15.1"
winit = "0.28.1"
nalgebra = "0.32.1"
bytemuck = { version = "1.12", features = ["derive"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
